Reader 1 Almost finished

--- a/LAB4/makefile
+++ b/LAB4/makefile
@@ -1,10 +1,10 @@
 CC = gcc
 READER_FILES = reader1.c
-READER_EXE = reader
+READER_EXE = reader1
 EXECUTABLE_FILES = wchild.c
 EXECUTABLE_EXE = wchild
 READER1_FILES = LEITOR-PAI.c
-READER1_EXE = LEITOR
+READER1_EXE = LEITOR-PAI
 WRITER_FILES = writer.c
 WRITER_EXE = writer
 
